--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-MetaTrader5==5.0.45
-pandas==2.0.3
-numpy==1.24.3
-requests==2.31.0
+MetaTrader5>=5.0.0
+pandas>=1.3.0
+numpy>=1.20.0
+requests>=2.25.0
+matplotlib>=3.4.0
+pytz>=2021.1
+python-dateutil>=2.8.1
