Update .gitignore and remove old log files
- Add new log directory structure to .gitignore to prevent unnecessary log files from being tracked.
- Remove outdated log files from the repository to clean up the project and reduce clutter.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@ __pycache__/
 *.pyd
 *.pyw
 *.pyz
+
+.logs/
+.logs/trades/
+.logs/logs/
+.logs/logs/logs/
+.logs/logs/logs/logs/
+.logs/logs/logs/logs/logs/
+.logs/logs/logs/logs/logs/logs/
+
+*.log
